apps/clusters/prod/apps/utils/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: grafana
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "2G"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "2G"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana-push.onelitefeather.dev
      secretName: grafana-push-onelitefeather-dev-tls
  rules:
    - host: grafana-push.onelitefeather.dev
      http:
        paths:
          - path: /loki
            pathType: Prefix
            backend:
              service:
                name: loki-gateway
                port:
                  number: 80
#          - path: /api
#            pathType: Prefix
#            backend:
#              service:
#                name: mimir-nginx
#                port:
#                  number: 80
#          - path: /metrics
#            pathType: Prefix
#            backend:
#              service:
#                name: grafana-loki-prometheus-pushgateway
#                port:
#                  number: 9091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyroscope-ingress
  namespace: grafana
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "2G"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "2G"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana-push.onelitefeather.dev
      secretName: grafana-push-onelitefeather-dev-tls
  rules:
    - host: grafana-push.onelitefeather.dev
      http:
        paths:
          - path: "/pyroscope(/|$)(.*)"
            pathType: Prefix
            backend:
              service:
                name: pyroscope
                port:
                  number: 4040
